deploy: b743aec9e684bdf94f26a04979623b32a0168001

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 04 Dec. 2024 -->
+<!-- 21 Mar. 2025 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My homepage with org-mode</title>
@@ -19,7 +19,6 @@
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
-<link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
 <link rel="stylesheet" href="css/site.css?v=a26d1ec203093aa7333d3a99f7a0a387a845d5435ae4509a31222ff5b8f8165c" type="text/css">
 </head>
 <body>
@@ -82,9 +81,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org21052d1" class="outline-2">
-<h2 id="org21052d1">Introduction</h2>
-<div class="outline-text-2" id="text-org21052d1">
+<section id="outline-container-org0303efe" class="outline-2">
+<h2 id="org0303efe">Introduction</h2>
+<div class="outline-text-2" id="text-org0303efe">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
@@ -92,7 +91,7 @@ This setup based on <a href="https://orgmode.org">org-mode</a>.
 </section>
 </main>
 <footer id="postamble" class="status">
-<p>Last updated 04 Dec. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 21 Mar. 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
