--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 04 Dec. 2024 -->
+<!-- 21 Mar. 2025 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Polyglot</title>
@@ -46,7 +46,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgda37ada">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org84609e1">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -67,9 +67,9 @@
 </script>
 
 
-<section id="outline-container-orgda37ada" class="outline-2">
-<h2 id="orgda37ada">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-orgda37ada">
+<section id="outline-container-org84609e1" class="outline-2">
+<h2 id="org84609e1">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org84609e1">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
@@ -79,7 +79,7 @@
 <footer id="postamble" class="status">
 <p class="date">Date: 21 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 04 Dec. 2024</p>
+<p class="date">Created: 21 Mar. 2025</p>
 </footer>
 </body>
 </html>
