--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 04 Dec. 2024 -->
+<!-- 21 Mar. 2025 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Playing with StableDiffusion: A Fascinating Algorithm for Image Generation</title>
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orge82063a">Introduction</a></li>
-<li><a href="#orgc5a3a2b">Understanding Stable Diffusion</a></li>
-<li><a href="#org5e33862">How Stable Diffusion Works</a></li>
-<li><a href="#org64c8bec">Applications of Stable Diffusion</a></li>
-<li><a href="#orge7163cb">Conclusion</a></li>
-<li><a href="#orge92c273">Code</a></li>
+<li><a href="#org8eb0d67">Introduction</a></li>
+<li><a href="#org175de74">Understanding Stable Diffusion</a></li>
+<li><a href="#org74dd1df">How Stable Diffusion Works</a></li>
+<li><a href="#orgc8b6bb0">Applications of Stable Diffusion</a></li>
+<li><a href="#org618f989">Conclusion</a></li>
+<li><a href="#orge040f39">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-orge82063a" class="outline-2">
-<h2 id="orge82063a">Introduction</h2>
-<div class="outline-text-2" id="text-orge82063a">
+<section id="outline-container-org8eb0d67" class="outline-2">
+<h2 id="org8eb0d67">Introduction</h2>
+<div class="outline-text-2" id="text-org8eb0d67">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgc5a3a2b" class="outline-2">
-<h2 id="orgc5a3a2b">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgc5a3a2b">
+<section id="outline-container-org175de74" class="outline-2">
+<h2 id="org175de74">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org175de74">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org5e33862" class="outline-2">
-<h2 id="org5e33862">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org5e33862">
+<section id="outline-container-org74dd1df" class="outline-2">
+<h2 id="org74dd1df">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org74dd1df">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org64c8bec" class="outline-2">
-<h2 id="org64c8bec">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org64c8bec">
+<section id="outline-container-orgc8b6bb0" class="outline-2">
+<h2 id="orgc8b6bb0">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgc8b6bb0">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-orge7163cb" class="outline-2">
-<h2 id="orge7163cb">Conclusion</h2>
-<div class="outline-text-2" id="text-orge7163cb">
+<section id="outline-container-org618f989" class="outline-2">
+<h2 id="org618f989">Conclusion</h2>
+<div class="outline-text-2" id="text-org618f989">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orge92c273" class="outline-2">
-<h2 id="orge92c273">Code</h2>
-<div class="outline-text-2" id="text-orge92c273">
+<section id="outline-container-orge040f39" class="outline-2">
+<h2 id="orge040f39">Code</h2>
+<div class="outline-text-2" id="text-orge040f39">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
@@ -235,7 +235,7 @@ plt.show()
 <footer id="postamble" class="status">
 <p class="date">Date: 22 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 04 Dec. 2024</p>
+<p class="date">Created: 21 Mar. 2025</p>
 </footer>
 </body>
 </html>
